# mini-gds

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cluster  pyproject.toml  requirements.txt
benchmarks/: __init__.py  benchmark_loader.py
configs/: cufile.json
docs/: INSTALL_GDS.md
scripts/: download_model.py  install_gds.sh
src/: __init__.py
src/loaders/: __init__.py  hf_loader.py  nixl_gds_loader.py
src/utils/: __init__.py  timer.py
tests/: __init__.py  compare.py  test_hf.py  test_nixl.py
